--- a/framework_node/package.json
+++ b/framework_node/package.json
@@ -25,9 +25,12 @@
   },
   "homepage": "https://github.com/vasanthk/react-es6-webpack-boilerplate",
   "dependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-runtime": "^6.3.19",
     "react": "^0.14.5",
-    "react-dom": "^0.14.5",
-    "babel-runtime": "^6.3.19"
+    "react-dom": "^0.14.5"
   },
   "devDependencies": {
     "babel-core": "^6.3.21",
