--- a/framework/src/main/resources/reference.conf
+++ b/framework/src/main/resources/reference.conf
@@ -1,12 +1,28 @@
 kamon {
 
-  metric{
+  metric {
+
+    filters {
+      akka-actor {
+        includes = [ "akka-system/user/host_*" ]
+        excludes = [ "akka-system/system/**"]
+      }
+
+      akka-dispatcher {
+        includes = [ "akka-system/akka.actor.default-dispatcher", "akka-system/database-dispatcher" ]
+      }
+
+      akka-router {
+     //   includes = [ "akka-system/user/**" ]
+      }
+    }
+
     tick-interval = 1 seconds
   }
 
   trace {
-    	    level-of-detail = simple-trace
-    	    sampling = all
+    level-of-detail = simple-trace
+    sampling = all
   }
 
   system-metrics {
@@ -46,17 +62,17 @@ kamon {
     # Subscription patterns used to select which metrics will be pushed to InfluxDB. Note that first, metrics
     # collection for your desired entities must be activated under the kamon.metrics.filters settings.
     subscriptions {
-      histogram       = [ "**" ]
-      min-max-counter = [ "**" ]
-      gauge           = [ "**" ]
-      counter         = [ "**" ]
-      trace           = [ "**" ]
-      trace-segment   = [ "**" ]
-      akka-actor      = [ "**" ]
-      akka-dispatcher = [ "**" ]
-      akka-router     = [ "**" ]
-      system-metric   = [ "**" ]
-      http-server     = [ "**" ]
+      histogram = ["**"]
+      min-max-counter = ["**"]
+      gauge = ["**"]
+      counter = ["**"]
+      trace = ["**"]
+      trace-segment = ["**"]
+      akka-actor = ["**"]
+      akka-dispatcher = ["**"]
+      akka-router = ["**"]
+      system-metric = ["**"]
+      http-server = ["**"]
     }
   }
 
