Add trace for clientview

--- a/framework/src/main/resources/reference.conf
+++ b/framework/src/main/resources/reference.conf
@@ -4,7 +4,7 @@ kamon {
 
     filters {
       akka-actor {
-        includes = [ "akka-system/user/host_*" ]
+        includes = [ "akka-system/user/host_*" , "akka-system/user/provider_*" , "akka-system/user/**"  ]
         excludes = [ "akka-system/system/**"]
       }
 
